--- a/Croatian/main/CloudService.apk/res/values-hr/plurals.xml
+++ b/Croatian/main/CloudService.apk/res/values-hr/plurals.xml
@@ -128,6 +128,10 @@
         <item quantity="one">%d Wi-Fi mreža</item>
         <item quantity="few">%d Wi-Fi mreža</item>
     </plurals>
+	<plurals name="display_number_of_devices">
+        <item quantity="other">Prikazuje se samo prvih %s nepouzdanih uređaja.</item>
+        <item quantity="one">Prikazuje se samo prvi %s nepouzdani uređaj.</item>
+    </plurals>
      <plurals name="e2ee_device_verification_num">
         <item quantity="other">%s neprovjerenih uređaja</item>
         <item quantity="one">%s neprovjereni uređaj</item>
@@ -226,6 +230,10 @@
         <item quantity="other">odabrano %d stavki</item>
         <item quantity="one">odabrana %d stavka</item>
         <item quantity="few">odabrano %d stavki</item>
+    </plurals>
+	<plurals name="not_authenticated_devices">
+        <item quantity="other">Ukupno imate %s nepouzdanih uređaja.</item>
+        <item quantity="one">Ukupno imate %s nepouzdani uređaj.</item>
     </plurals>
 	 <plurals name="noti_quota_full_title_with_icon_text">
         <item quantity="other">"Prostor za pohranu je pun. Ne mogu sinkronizirati &lt;font color=#F22424>%d aplikacija&lt;/font>."</item>
