--- a/Croatian/main/MiuiHome.apk/res/values-hr/plurals.xml
+++ b/Croatian/main/MiuiHome.apk/res/values-hr/plurals.xml
@@ -38,7 +38,8 @@
         <item quantity="one">povlačenje %1$d stavke</item>
     </plurals>
     <plurals name="announce_for_unread">
-        <item quantity="other">Nepročitano %2$s od %1$s</item>
+	     <item quantity="other">%1$s: %2$s novih obavijesti</item>
+        <item quantity="one">%1$s: %2$s nova obavijest</item>
     </plurals>
     <plurals name="delete_wallpapers_message">
         <item quantity="other">Izbrisati slike pozadine: %1$d?</item>
