--- a/Croatian/main/MiuiPackageInstaller.apk/res/values-hr/plurals.xml
+++ b/Croatian/main/MiuiPackageInstaller.apk/res/values-hr/plurals.xml
@@ -64,9 +64,21 @@
     <plurals name="less_than_one_minute_ago">
         <item quantity="other">Upravo sada</item>
     </plurals>
+	<plurals name="input_text_count_limit_talkback_one">
+        <item quantity="other">Uneseno je %1$d znakova.</item>
+        <item quantity="one">Unesen je %1$d znak.</item>
+    </plurals>
+    <plurals name="input_text_count_limit_talkback_two">
+        <item quantity="other">Unesite ukupno do %1$d znakova.</item>
+        <item quantity="one">Unesite ukupno do %1$d znak.</item>
+    </plurals>
     <plurals name="miuix_appcompat_items_selected">
         <item quantity="other">odabrano %d stavki</item>
         <item quantity="one">odabrana %d stavka</item>
+    </plurals>
+	<plurals name="miuix_indexer_selected">
+        <item quantity="other">Odabrano %1$d stavki</item>
+        <item quantity="one">Odabrana %1$d stavka</item>
     </plurals>
     <plurals name="mtrl_badge_content_description">
         <item quantity="other">%d novih obavijesti</item>
