--- a/Croatian/main/DownloadProviderUi.apk/res/values-hr/plurals.xml
+++ b/Croatian/main/DownloadProviderUi.apk/res/values-hr/plurals.xml
@@ -45,6 +45,14 @@
         <item quantity="one">prije %d min</item>
         <item quantity="few">prije %d min</item>
     </plurals>
+	<plurals name="action_description_all_paused">
+        <item quantity="other">%d preuzimanja pauzirana</item>
+        <item quantity="one">%d preuzimanje pauzirano</item>
+    </plurals>
+    <plurals name="action_description_all_start">
+        <item quantity="other">Pokreni %d preuzimanja</item>
+        <item quantity="one">Pokreni %d preuzimanje</item>
+    </plurals>
     <plurals name="dialog_confirm_delete_downloads_message">
         <item quantity="other">Izbrisati preuzimanja: %d?</item>
         <item quantity="one">Izbrisati %d preuzimanje?</item>
@@ -109,6 +117,10 @@
         <item quantity="other">odabrano %d stavki</item>
         <item quantity="one">odabrana %d stavka</item>
         <item quantity="few">odabrano %d stavki</item>
+    </plurals>
+	<plurals name="miuix_indexer_selected">
+        <item quantity="other">Odabrano %1$d stavki</item>
+        <item quantity="one">Odabrana %1$d stavka</item>
     </plurals>
     <plurals name="num_minutes_ago">
         <item quantity="other">prije %d min</item>
