--- a/Croatian/main/MiuiAod.apk/res/values-hr/arrays.xml
+++ b/Croatian/main/MiuiAod.apk/res/values-hr/arrays.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+<string-array name="big_time_clock_title_array">
+    <item>Font sustava</item>
+    <item>Široki kvadratni font</item>
+    <item>Jednostavan crni font</item>
+    <item>Slojeviti font</item>
+ </string-array>
 <string-array name="kg_glass_filters">
      <item>Original</item>
      <item>Zamućivanje</item>
