--- a/Croatian/main/Calculator.apk/res/values-hr/plurals.xml
+++ b/Croatian/main/Calculator.apk/res/values-hr/plurals.xml
@@ -68,6 +68,10 @@
         <item quantity="other">odabrano %d stavki</item>
         <item quantity="one">odabrana %d stavka</item>
     </plurals>
+	<plurals name="miuix_indexer_selected">
+        <item quantity="other">Odabrano %1$d stavki</item>
+        <item quantity="one">Odabrana %1$d stavka</item>
+    </plurals>
     <plurals name="mortgage_summary_years">
         <item quantity="other">%1$d godina (%2$d mjeseci)</item>
         <item quantity="one">%1$d godina (%2$d mjesec)</item>
