--- a/Croatian/main/MiMediaEditor.apk/res/values-hr/plurals.xml
+++ b/Croatian/main/MiMediaEditor.apk/res/values-hr/plurals.xml
@@ -60,9 +60,29 @@
         <item quantity="other">prije %d min</item>
         <item quantity="one">prije 1 minutu</item>
     </plurals>
+	<plurals name="photo_editor_talkback_crop_distortion_value">
+        <item quantity="other">Distorzija: %d</item>
+        <item quantity="one">Distorzija: %d</item>
+    </plurals>
+    <plurals name="photo_editor_talkback_crop_horizontal_default_value">
+        <item quantity="other">Zadana vodoravna vrijednost: %d stupnjeva</item>
+        <item quantity="one">Zadana vodoravna vrijednost: %d stupanj</item>
+    </plurals>
+    <plurals name="photo_editor_talkback_crop_horizontal_value">
+        <item quantity="other">Vododravno: %d stupnjeva</item>
+        <item quantity="one">Vododravno: %d stupanj</item>
+    </plurals>
     <plurals name="photo_editor_talkback_crop_scale_value">
         <item quantity="other">Rotiraj %d stupnjeva</item>
         <item quantity="one">Rotiraj %d stupanj</item>
+    </plurals>
+	<plurals name="photo_editor_talkback_crop_vertical_default_value">
+        <item quantity="other">Zadana okomita vrijednost: %d stupnjeva</item>
+        <item quantity="one">Zadana okomita vrijednost: %d stupanj</item>
+    </plurals>
+    <plurals name="photo_editor_talkback_crop_vertical_value">
+        <item quantity="other">Okomito: %d stupnjeva</item>
+        <item quantity="one">Okomito: %d stupanj</item>
     </plurals>
     <plurals name="send_apk_dialog_desc">
         <item quantity="other">%2$d instal. paketa (%3$s) od %1$s</item>
