--- a/Croatian/main/SecurityCenter.apk/res/values-hr/plurals.xml
+++ b/Croatian/main/SecurityCenter.apk/res/values-hr/plurals.xml
@@ -743,6 +743,10 @@ Sada možete dobiti %d-dnevno besplatno probno razdoblje!"</item>
     <plurals name="notification_title_cmcc_app_check">
         <item quantity="other">%d dana od posljednjeg pregleda</item>
         <item quantity="one">%d dan od posljednjeg pregleda</item>
+	</plurals>
+	<plurals name="miuix_indexer_selected">
+        <item quantity="other">Odabrano %1$d stavki</item>
+        <item quantity="one">Odabrana %1$d stavka</item>
     </plurals>
     <plurals name="num_minutes_ago">
         <item quantity="other">prije %d min</item>
