--- a/Croatian/main/Contacts.apk/res/values-hr/plurals.xml
+++ b/Croatian/main/Contacts.apk/res/values-hr/plurals.xml
@@ -172,6 +172,10 @@
         <item quantity="other">spojeno iz izvora: %0$d</item>
         <item quantity="one">nije spojeno</item>
     </plurals>
+	     <plurals name="miuix_indexer_selected">
+        <item quantity="other">Odabrano %1$d stavki</item>
+        <item quantity="one">Odabrana %1$d stavka</item>
+     </plurals>
     <plurals name="miuix_appcompat_items_selected">
         <item quantity="other">odabrano %d stavki</item>
         <item quantity="one">odabrana %d stavka</item>
