--- a/Croatian/main/MiuiScanner.apk/res/values-hr/plurals.xml
+++ b/Croatian/main/MiuiScanner.apk/res/values-hr/plurals.xml
@@ -38,7 +38,7 @@
         <item quantity="one">Izbrisati %1$d sliku?</item>
     </plurals>
     <plurals name="choosed">
-        <item quantity="other">Odabrano stavki: %1$d</item>
+        <item quantity="other">Odabrano %1$d stavki</item>
         <item quantity="one">Odabrana %1$d stavka</item>
     </plurals>
     <plurals name="document_duplicate_data_tip">
@@ -67,6 +67,10 @@
     <plurals name="miuix_appcompat_items_selected">
         <item quantity="other">odabrano %d stavki</item>
         <item quantity="one">odabrana %d stavka</item>
+    </plurals>
+	<plurals name="miuix_indexer_selected">
+        <item quantity="other">Odabrano %1$d stavki</item>
+        <item quantity="one">Odabrana %1$d stavka</item>
     </plurals>
     <plurals name="monitoringHistory_deleteAlert">
         <item quantity="other">Jeste li sigurni da želite izbrisati ovih %1$d zapisa?</item>
