--- a/Croatian/main/Mms.apk/res/values-hr/plurals.xml
+++ b/Croatian/main/Mms.apk/res/values-hr/plurals.xml
@@ -126,6 +126,10 @@
     <plurals name="miuix_appcompat_items_selected">
         <item quantity="other">odabrano %d stavki</item>
         <item quantity="one">odabrana %d stavka</item>
+	 </plurals>
+	<plurals name="miuix_indexer_selected">
+        <item quantity="other">Odabrano %1$d stavki</item>
+        <item quantity="one">Odabrana %1$d stavka</item>
     </plurals>
 	 <plurals name="mtrl_badge_content_description">
         <item quantity="other">%d novih obavijesti</item>
