--- a/Croatian/main/PersonalAssistant.apk/res/values-hr/plurals.xml
+++ b/Croatian/main/PersonalAssistant.apk/res/values-hr/plurals.xml
@@ -55,6 +55,10 @@
     <plurals name="num_minutes_ago">
         <item quantity="other">prije %d min</item>
         <item quantity="one">Prije 1 minute</item>
+	 </plurals>
+	<plurals name="miuix_indexer_selected">
+        <item quantity="other">Odabrano %1$d stavki</item>
+        <item quantity="one">Odabrana %1$d stavka</item>
     </plurals>
 	 <plurals name="mtrl_badge_content_description">
         <item quantity="other">%d novih obavijesti</item>
