--- a/Croatian/main/EsimLPA.apk/res/values-hr/plurals.xml
+++ b/Croatian/main/EsimLPA.apk/res/values-hr/plurals.xml
@@ -29,6 +29,14 @@
         <item quantity="other">prije %d min</item>
         <item quantity="one">prije %d min</item>
     </plurals>
+	<plurals name="dialog_countdown_delete_talkback">
+        <item quantity="other">Izbrisat će se za %1$d sekundi</item>
+        <item quantity="one">Izbrisat će se za %1$d sekundu</item>
+    </plurals>
+    <plurals name="dialog_countdown_reset_talkback">
+        <item quantity="other">Ponovno će se postaviti za %1$d sekundi</item>
+        <item quantity="one">Ponovno će se postaviti za %1$d sekundu</item>
+    </plurals>
     <plurals name="half_hour_ago">
         <item quantity="other">Prije pola sata</item>
     </plurals>
@@ -59,6 +67,10 @@
     <plurals name="mtrl_badge_content_description">
         <item quantity="other">%d novih obavijesti</item>
         <item quantity="one">%d nova obavijest</item>
+    </plurals>
+	<plurals name="miuix_indexer_selected">
+        <item quantity="other">Odabrano %1$d stavki</item>
+        <item quantity="one">Odabrana %1$d stavka</item>
     </plurals>
     <plurals name="num_minutes_ago">
         <item quantity="other">prije %d min</item>
