--- a/Croatian/main/MiGalleryLockscreen.apk/res/values-hr/plurals.xml
+++ b/Croatian/main/MiGalleryLockscreen.apk/res/values-hr/plurals.xml
@@ -88,6 +88,10 @@
         <item quantity="other">odabrano %d stavki</item>
         <item quantity="one">odabrana %d stavka</item>
     </plurals>
+	<plurals name="miuix_indexer_selected">
+        <item quantity="other">Odabrano %1$d stavki</item>
+        <item quantity="one">Odabrana %1$d stavka</item>
+	</plurals>
     <plurals name="mtrl_badge_content_description">
         <item quantity="other">Nove obavijesti: %d</item>
         <item quantity="one">%d nova obavijest</item>
