--- a/Croatian/main/MiuiHome.apk/res/values-hr/arrays.xml
+++ b/Croatian/main/MiuiHome.apk/res/values-hr/arrays.xml
@@ -12,11 +12,26 @@
          <item>Uravnoteženo</item>
          <item>Brzo</item>
 	</string-array>
+	     <string-array name="color_filter_type_name">
+        <item></item>
+        <item>Crvena</item>
+        <item>Žuta</item>
+        <item>Zelena</item>
+        <item>Plava</item>
+        <item>Ljubičasta</item>
+        <item>Crna</item>
+     </string-array>
     <string-array name="editing_mode_entries">
         <item>Pozadina</item>
         <item>Widgeti</item>
         <item>Postavke</item>
     </string-array>
+	  <string-array name="editing_mode_entries_new">
+        <item>Pozadina</item>
+        <item>Efekti</item>
+        <item>Widgeti</item>
+        <item>Postavke</item>
+     </string-array>
     <string-array name="gadget_weather_image">
         <item>Vedro</item>
         <item>Oblačno</item>
