--- a/Croatian/main/Backup.apk/res/values-hr/plurals.xml
+++ b/Croatian/main/Backup.apk/res/values-hr/plurals.xml
@@ -92,6 +92,10 @@
         <item quantity="other">prije %d min</item>
         <item quantity="one">prije 1 minutu</item>
     </plurals>
+	 <plurals name="miuix_indexer_selected">
+        <item quantity="other">Odabrano %1$d stavki</item>
+        <item quantity="one">Odabrana %1$d stavka</item>
+    </plurals>
     <plurals name="save_item_failed_summary_seg1">
         <item quantity="other">"Uvezeno stavki: %d"</item>
         <item quantity="one">"Uvezena %d stavka."</item>
