--- a/Croatian/main/CleanMaster.apk/res/values-hr/plurals.xml
+++ b/Croatian/main/CleanMaster.apk/res/values-hr/plurals.xml
@@ -232,7 +232,11 @@
     <plurals name="miuix_appcompat_items_selected">
         <item quantity="other">odabrano %d stavki</item>
         <item quantity="one">odabrana %d stavka</item>
-    </plurals>
+	</plurals>
+	 <plurals name="miuix_indexer_selected">
+        <item quantity="other">Odabrano %1$d stavki</item>
+        <item quantity="one">Odabrana %1$d stavka</item>
+		</plurals>
     <plurals name="notification_checker_installed_apk_text">
         <item quantity="other">Izbriši %d instalacijskih paketa</item>
         <item quantity="one">Izbriši %d instalacijski paket</item>
