--- a/Croatian/main/Provision.apk/res/values-hr-rHR/plurals.xml
+++ b/Croatian/main/Provision.apk/res/values-hr-rHR/plurals.xml
@@ -60,6 +60,10 @@
         <item quantity="other">prije %d min</item>
         <item quantity="one">prije 1 minutu</item>
     </plurals>
+	 <plurals name="miuix_indexer_selected">
+        <item quantity="other">Odabrano %1$d stavki</item>
+        <item quantity="one">Odabrana %1$d stavka</item>
+     </plurals>
 	 <plurals name="sim_card_esim_num">
         <item quantity="other">Pronađen %d eSIM. Dodirnite za aktivaciju.</item>
         <item quantity="one">Pronađen %d eSIM. Dodirnite za aktivaciju.</item>
