--- a/Croatian/main/Settings.apk/res/values-hr/plurals.xml
+++ b/Croatian/main/Settings.apk/res/values-hr/plurals.xml
@@ -448,6 +448,10 @@
         <item quantity="other">%s minuta</item>
         <item quantity="one">%s minuta</item>
     </plurals>
+	 <plurals name="miuix_indexer_selected">
+        <item quantity="other">Odabrano %1$d stavki</item>
+        <item quantity="one">Odabrana %1$d stavka</item>
+	  </plurals>
     <plurals name="miui_sos_emergency_contacts_quantity">
         <item quantity="other">%d dodano</item>
         <item quantity="one">%d dodan</item>
