--- a/Croatian/main/MiuiBluetooth.apk/res/values-hr/plurals.xml
+++ b/Croatian/main/MiuiBluetooth.apk/res/values-hr/plurals.xml
@@ -100,6 +100,10 @@
         <item quantity="one">odabrana %d stavka</item>
 	<item quantity="few">odabrano %d stavki</item>
     </plurals>
+	<plurals name="miuix_indexer_selected">
+        <item quantity="one">Odabrano %1$d stavki</item>
+        <item quantity="other">Odabrana %1$d stavka</item>
+     </plurals>
     <plurals name="mtrl_badge_content_description">
         <item quantity="other">%d novih obavijesti</item>
         <item quantity="one">%d nova obavijest</item>
