--- a/Croatian/main/CloudService.apk/res/values-hr/plurals.xml
+++ b/Croatian/main/CloudService.apk/res/values-hr/plurals.xml
@@ -157,11 +157,6 @@
         <item quantity="one">Pokušajte ponovno za %d sekundu</item>
         <item quantity="few">Pokušajte ponovo za %d sek.</item>
     </plurals>
-	 <plurals name="gallery_auto_sync_fail_noti_red_title">
-        <item quantity="other">Sinkronizacija &lt;font color=#F22424>%s stavki nije moguća&lt;/font></item>
-        <item quantity="one">Sinkronizacija &lt;font color=#F22424>%s stavke nije moguća&lt;/font></item>
-        <item quantity="few">Sinkronizacija &lt;font color=#F22424>%s stavke nije moguća&lt;/font></item>
-    </plurals>
     <plurals name="gallery_auto_sync_fail_noti_title">
         <item quantity="other">"Ne mogu sinkronizirati %s stavki"</item>
         <item quantity="one">"Ne mogu sinkronizirati %s stavku"</item>
@@ -225,6 +220,62 @@
         <item quantity="other">Sinkr. će se nastaviti za %d min.</item>
         <item quantity="one">Sinkr. će se nastaviti za %d min.</item>
         <item quantity="few">Sinkr. će se nastaviti za %d min.</item>
+    </plurals>
+	<plurals name="micloud_preference_family_detail">
+        <item quantity="one">Podijeljeno s %1$d osobom. Član obitelji koristio je %2$s.</item>
+        <item quantity="other">Podijeljeno s %1$d osobom. Član obitelji koristio je %2$s.</item>
+    </plurals>
+    <plurals name="micloud_preference_items_count">
+        <item quantity="one">%s stavka</item>
+        <item quantity="other">%s stavki</item>
+    </plurals>
+    <plurals name="micloud_preference_photo_detail">
+        <item quantity="one">%1$s fotografija</item>
+        <item quantity="other">%1$s fotografija</item>
+    </plurals>
+    <plurals name="micloud_preference_premium_restore_deleted">
+        <item quantity="one">Premium članovi mogu vratiti stavke unutar %d dana od brisanja</item>
+        <item quantity="other">Premium članovi mogu vratiti stavke unutar %d dan od brisanja</item>
+    </plurals>
+    <plurals name="micloud_preference_premium_restore_deleted_1">
+        <item quantity="one">Korisnici bez članstva mogu vratiti izbrisane stavke u roku od %d dana</item>
+        <item quantity="other">Korisnici bez članstva mogu vratiti izbrisane stavke u roku od %d dan</item>
+    </plurals>
+    <plurals name="micloud_preference_premium_restore_deleted_2">
+        <item quantity="one">Mega članovi mogu vratiti izbrisane stavke unutar %d dana</item>
+        <item quantity="other">Mega članovi mogu vratiti izbrisane stavke unutar %d dan</item>
+    </plurals>
+    <plurals name="micloud_preference_premium_restore_deleted_3">
+        <item quantity="one">Ultra članovi mogu vratiti izbrisane stavke unutar %d dana</item>
+        <item quantity="other">Ultra članovi mogu vratiti izbrisane stavke unutar %d dan</item>
+    </plurals>
+    <plurals name="micloud_preference_record_detail">
+        <item quantity="one">%s stavka</item>
+        <item quantity="other">%s stavki</item>
+    </plurals>
+    <plurals name="micloud_preference_recover_deleted_data">
+        <item quantity="one">Članovi mogu vratiti izbrisane stavke unutar %d dana</item>
+        <item quantity="other">Članovi mogu vratiti izbrisane stavke unutar %d dan</item>
+    </plurals>
+    <plurals name="micloud_preference_recover_summary">
+        <item quantity="one">Korisnici bez članstva mogu vratiti kontakte na bilo koju verziju spremljenu unutar %d dana</item>
+        <item quantity="other">Korisnici bez članstva mogu vratiti kontakte na bilo koju verziju spremljenu unutar %d dan</item>
+    </plurals>
+    <plurals name="micloud_preference_recover_summary_1">
+        <item quantity="one">Premium članovi mogu vratiti kontakte na bilo koju verziju spremljenu unutar %d dana</item>
+        <item quantity="other">Premium članovi mogu vratiti kontakte na bilo koju verziju spremljenu unutar %d dan</item>
+    </plurals>
+    <plurals name="micloud_preference_recover_summary_2">
+        <item quantity="one">Mega članovi mogu vratiti kontakte na bilo koju verziju spremljenu unutar %d dana</item>
+        <item quantity="other">Mega članovi mogu vratiti kontakte na bilo koju verziju spremljenu unutar %d dan</item>
+    </plurals>
+    <plurals name="micloud_preference_recover_summary_3">
+        <item quantity="one">Ultra članovi mogu vratiti kontakte na bilo koju verziju spremljenu unutar %d dana</item>
+        <item quantity="other">Ultra članovi mogu vratiti kontakte na bilo koju verziju spremljenu unutar %d dan</item>
+    </plurals>
+    <plurals name="micloud_preference_video_detail">
+        <item quantity="one">%1$s videozapisa</item>
+        <item quantity="other">%1$s videozapis</item>
     </plurals>
     <plurals name="miuix_appcompat_items_selected">
         <item quantity="other">odabrano %d stavki</item>
