--- a/Croatian/main/CleanMaster.apk/res/values-hr/arrays.xml
+++ b/Croatian/main/CleanMaster.apk/res/values-hr/arrays.xml
@@ -38,6 +38,15 @@
         <item>Veličina</item>
         <item>Naziv</item>
     </string-array>
+	<string-array name="columbus_exo_controls_playback_speeds">
+        <item>0.25x</item>
+        <item>0.5x</item>
+        <item>0.75x</item>
+        <item>Normalno</item>
+        <item>1.25x</item>
+        <item>1.5x</item>
+        <item>2x</item>
+    </string-array>
     <string-array name="empty_floder_clean_menu">
         <item>Očisti</item>
     </string-array>
